--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,19 @@
-<h2>Christina Labay</h2>
-<main>
- <img src=https://www.instagram.com/p/BkMB9FAlw0u/?utm_source=ig_web_copy_link" alt="Lola and me running">
- 
-</main>
- 
-<footer>Copyright Christina Labay 2018</footer>
+<!DOCTYPE html>
+<html>
+ <head>
+  <title>Christina Labay</title>
+ </head>
+ <body>
+  <header>
+   <h1>Christina Labay</h1>
+  </header>
+  <img src=https://www.instagram.com/p/BkMB9FAlw0u/?utm_source=ig_web_copy_link" alt="Lola and me running">                                                                                                          
+  <ul>
+    <li>Plant-Based Runner</li>
+    <li>Craft Beer Drinker</li>
+    <li>Failer of Humor</li>
+  </ul>                                                                                                          
+  <a href="https://www.linkedin.com/feed/"><Linked In></a>   
+  <a href="https://github.com/shhmavel</Github"><Github></a>  
+</body> 
+</html>
