--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,11 @@
  <head>
   <title>Christina Labay</title>
  </head>
+ <style>
+  .red-text{
+   color: red;
+  }
+ </style>
  <body>
   <header>
    <h1>Christina Labay</h1>
