--- a/Index.html
+++ b/Index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
+
 <html>
  <head>
   <title>Christina Labay</title>
  </head>
+ <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+ font-family: Lobster;
  <style>
-  .red-text{
-   color: red;
-  }
+  .red-text{color: red;}
  </style>
+ h1{
+   font-family: Lobster;
+ }
  <body>
   <header>
-   <h1>Christina Labay</h1>
-  </header>                                                                                                       
+   <h1 class="red-text">Christina Labay</h1>
+  </header>
   <ul>
     <li>Plant-Based Runner</li>
     <li>Craft Beer Drinker</li>
     <li>Failer of Humor</li>
-  </ul>                                                                                                          
-  <a href="https://www.linkedin.com/feed/"><Linked In></a>   
-  <a href="https://github.com/shhmavel</Github"><Github></a>  
-</body> 
+  </ul>
+  <a href="https://www.linkedin.com/feed/"><Linked In></a>
+  <a href="https://github.com/shhmavel</Github"><Github></a>
+</body>
 </html>
